--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>slack</title>
-    <link rel="stylesheet" href="../../eniyavan/eni/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <script src="https://use.fontawesome.com/274ad32be9.js"></script>
 </head>
 <body>
@@ -30,7 +30,7 @@
       </div>
          <div class="heading-secound">
             <div class="image">
-                <img src="../../eniyavan/eni/computer.png">  
+                <img src="computer.png">  
             </div>
             <div class="heading-secound-1">
                 <div class="he">
